<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DetectBldc</class>
 <widget class="QWidget" name="DetectBldc">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>509</width>
    <height>140</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Detect BLDC Parameters</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <layout class="QGridLayout" name="gridLayout">
        <property name="spacing">
         <number>3</number>
        </property>
        <item row="2" column="1">
         <widget class="QDoubleSpinBox" name="dutyBox">
          <property name="font">
           <font>
            <family>Monospace</family>
           </font>
          </property>
          <property name="toolTip">
           <string>Duty cycle to measure BEMF coupling at</string>
          </property>
          <property name="prefix">
           <string>D: </string>
          </property>
          <property name="suffix">
           <string/>
          </property>
          <property name="maximum">
           <double>1.000000000000000</double>
          </property>
          <property name="singleStep">
           <double>0.010000000000000</double>
          </property>
          <property name="value">
           <double>0.050000000000000</double>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QDoubleSpinBox" name="currentBox">
          <property name="font">
           <font>
            <family>Monospace</family>
           </font>
          </property>
          <property name="toolTip">
           <string>Current to use for spinning up the motor</string>
          </property>
          <property name="prefix">
           <string>I </string>
          </property>
          <property name="suffix">
           <string> A</string>
          </property>
          <property name="maximum">
           <double>100.000000000000000</double>
          </property>
          <property name="value">
           <double>5.000000000000000</double>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QPushButton" name="applyButton">
          <property name="toolTip">
           <string>Apply detection results</string>
          </property>
          <property name="text">
           <string/>
          </property>
          <property name="icon">
           <iconset resource="../res.qrc">
            <normaloff>:/res/icons/apply.png</normaloff>:/res/icons/apply.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>45</width>
            <height>16</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QDoubleSpinBox" name="erpmBox">
          <property name="font">
           <font>
            <family>Monospace</family>
           </font>
          </property>
          <property name="toolTip">
           <string>Min ERPM setting for delay commutation mode to use</string>
          </property>
          <property name="prefix">
           <string>Ï‰ </string>
          </property>
          <property name="suffix">
           <string> ERPM</string>
          </property>
          <property name="decimals">
           <number>1</number>
          </property>
          <property name="maximum">
           <double>100000.000000000000000</double>
          </property>
          <property name="value">
           <double>150.000000000000000</double>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="helpButton">
          <property name="toolTip">
           <string>Show help</string>
          </property>
          <property name="text">
           <string/>
          </property>
          <property name="icon">
           <iconset resource="../res.qrc">
            <normaloff>:/res/icons/Help-96.png</normaloff>:/res/icons/Help-96.png</iconset>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="runButton">
          <property name="toolTip">
           <string>Start detection</string>
          </property>
          <property name="text">
           <string/>
          </property>
          <property name="icon">
           <iconset resource="../res.qrc">
            <normaloff>:/res/icons/Circled Play-96.png</normaloff>:/res/icons/Circled Play-96.png</iconset>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QTextBrowser" name="resultBrowser">
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>70</height>
         </size>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../res.qrc"/>
 </resources>
 <connections/>
</ui>
